--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,21 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>2.5.14</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<tomcat.port>9081</tomcat.port>
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
-		<lombok.version>1.18.10</lombok.version>
+		<lombok.version>1.18.22</lombok.version>
+		<spring-security-oauth2.version>2.5.2</spring-security-oauth2.version>
+		<jackson.version>2.12.5</jackson.version>
+
 	</properties>
 
 	<dependencies>
@@ -61,22 +64,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.7.RELEASE</version>
-		</dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring-security-oauth2.version}</version>
         </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.8</version>
+			<version>${jackson.version}</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -103,12 +101,12 @@
                     </execution>
                 </executions>
 			</plugin>
-			
+
 	         <plugin>
 		        <groupId>io.fabric8</groupId>
 		        <artifactId>docker-maven-plugin</artifactId>
 		        <extensions>true</extensions>
-		        
+
  		        <configuration>
 		          <images>
 			            <image>
@@ -123,10 +121,10 @@
 			              </build>
 			              <run>
 			              	<namingStrategy>alias</namingStrategy>
-			                <ports> 
+			                <ports>
 			                  <port>${tomcat.port}:8080</port>
 			                </ports>
-					         <wait> 
+					         <wait>
 					           <http>
 					              <url>http://${tomcat.ip}:${tomcat.port}/actuator/health</url>
 					           </http>
@@ -135,8 +133,8 @@
 			              </run>
 			            </image>
 		          </images>
-		        </configuration>	
-		        	
+		        </configuration>
+
 		      </plugin>
 
 			<plugin>
@@ -144,8 +142,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
