--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+spring.main.allow-bean-definition-overriding=true
