--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.5.Final</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
