--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>2.7.6</version>
 		</dependency>
 
 	</dependencies>
