--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
 
