--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.22</lombok.version>
-		<spring-security-oauth2.version>2.5.2</spring-security-oauth2.version>
+		<spring-security-oauth2-autoconfigure.version>2.7.0</spring-security-oauth2-autoconfigure.version>
 		<jackson-databind.version>2.13.3</jackson-databind.version>
 
 	</properties>
@@ -65,10 +65,14 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>${spring-security-oauth2-autoconfigure.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
