--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
+			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
 			<version>${spring-security-oauth2-autoconfigure.version}</version>
 		</dependency>
