--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.22</lombok.version>
-		<spring-security-oauth2-autoconfigure.version>2.7.6</spring-security-oauth2-autoconfigure.version>
 		<jackson-databind.version>2.13.3</jackson-databind.version>
 
 	</properties>
@@ -69,11 +68,6 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.security.oauth.boot</groupId>
-			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-			<version>${spring-security-oauth2-autoconfigure.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson-databind.version}</version>
@@ -108,6 +102,7 @@
 	         <plugin>
 		        <groupId>io.fabric8</groupId>
 		        <artifactId>docker-maven-plugin</artifactId>
+		        <version>0.3.644</version>
 		        <extensions>true</extensions>
 		        
  		        <configuration>
