--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>fabric8-maven-releases</id>
+			<url>https://maven.fabric8.io/repository/maven-releases/</url>
+		</repository>
+	</repositories>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
