--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt</artifactId>
+    		<version>0.9.1</version>
+		</dependency>
 
 	</dependencies>
 	<build>
